# CTF_practice

./: .gitignore  pyproject.toml
picoCTF2021/ReverseEnginieering/: ARMssembly_0.md
picoCTF2022/WebExploitation/: SQLiLite.md
