[tool.poetry]
name = "ctf-practice"
version = "0.1.0"
description = ""
authors = ["n4okins <naoki.jsdf.jj@gmail.com>"]
readme = "README.md"
packages = [{include = "ctf_practice"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
